# eight-mcp-community

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/eight/: __init__.py  auth.py  browser_login.py  cli.py  client.py  errors.py  extract.py  html.py  http.py  login_setup.py  mcp_server.py  models.py  setup_help.py
tests/: test_auth.py  test_browser_login.py  test_cli.py  test_client.py  test_extract.py  test_http.py  test_imports.py  test_login_setup.py  test_mcp_server.py  test_setup_help.py
