[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "eight-mcp-community"
version = "0.1.3"
description = "Unofficial Python client and stdio MCP server for Eight person search workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "new-village" }]
keywords = ["mcp", "model-context-protocol", "eight", "stdio", "business-cards", "community"]
dependencies = [
  "mcp>=1.23.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.56.0"]
cloudflare = ["curl_cffi>=0.13.0"]

[project.urls]
Homepage = "https://github.com/new-village/eight-mcp-community"
Repository = "https://github.com/new-village/eight-mcp-community"
Issues = "https://github.com/new-village/eight-mcp-community/issues"

[project.scripts]
eight-mcp-community = "eight.cli:main"
eight-mcp = "eight.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-socket>=0.7.0",
  "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eight"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
